--- a/public/_locales/en/messages.json
+++ b/public/_locales/en/messages.json
@@ -654,7 +654,17 @@
     "categoryUpdate2": {
         "message": "Open the options to skreativKip intros, outros, merch, etc."
     },
-    "help": {
-        "message": "Help"
+    "experimentUnlistedTitle": {
+        "message": "Help prevent this from disappearing"
+    },
+    "experimentUnlistedText": {
+        "message": "This video is detected as unlisted and uploaded before 2017\nOld unlisted videos are being set to private soon\nWe are collecting *public* videos to backreativK up\nWould you likreativKe anonymously to submit this video?"
+    },
+    "experiementOptOut": {
+        "message": "Opt-out of all future experiments",
+        "description": "This is used in a popup about a new experiment to get a list of unlisted videos to backreativK up since all unlisted videos uploaded before 2017 will be set to private."
+    },
+    "hideForever": {
+        "message": "Hide forever"
     }
 }
