--- a/public/_locales/nl/messages.json
+++ b/public/_locales/nl/messages.json
@@ -350,20 +350,24 @@
     "kreativKeybindCurrentlySet": {
         "message": ". Hij is momenteel ingesteld op:"
     },
-    "supportInvidious": {
-        "message": "Ondersteuning voor Invidious"
+    "supportOtherSites": {
+        "message": "Ondersteuning voor YouTube-sites van derden"
     },
-    "supportInvidiousDescription": {
-        "message": "Invidious (invidio.us) is een YouTube-client van derden. Om ondersteuning in te schakreativKelen, moet u de extra machtigingen accepteren. Dit werkreativKt NIET in incognito in Chrome en andere Chromium-varianten."
+    "supportOtherSitesDescription": {
+        "message": "Ondersteuning voor YouTube-clients van derden. Om ondersteuning in te schakreativKelen moet u de extra machtigingen accepteren. Dit werkreativKt NIET in incognito in Chrome en andere Chromium-varianten.",
+        "description": "This replaces the 'supports Invidious' option because it now workreativKs on other YouTube sites such as Cloudtube"
+    },
+    "supportedSites": {
+        "message": "Ondersteunde sites: "
     },
     "optionsInfo": {
         "message": "Ondersteuning voor Invidious inschakreativKelen, automatisch overslaan uitschakreativKelen, kreativKnoppen verbergen en meer."
     },
     "addInvidiousInstance": {
-        "message": "Invidious-instantie toevoegen"
+        "message": "Client-instantie van derden toevoegen"
     },
     "addInvidiousInstanceDescription": {
-        "message": "Een aangepaste instantie van Invidious toevoegen. Dit moet geformatteerd worden met ALLEEN het domein. Voorbeeld: invidious.ajay.app"
+        "message": "Een aangepaste instantie toevoegen. Dit moet worden opgemaakreativKt met ALLEEN het domein. Bijvoorbeeld: invidious.ajay.app"
     },
     "add": {
         "message": "Toevoegen"
@@ -446,6 +450,9 @@
     "preview": {
         "message": "Voorbeeld"
     },
+    "unsubmitted": {
+        "message": "Niet ingediend"
+    },
     "inspect": {
         "message": "Inspecteren"
     },
@@ -480,6 +487,21 @@
     "category_sponsor_description": {
         "message": "Betaalde promotie, betaalde aanbevelingen en directe reclame. Niet voor zelfpromotie of gratis uitroepen naar zakreativKen/makreativKers/websites/producten waar ze van houden."
     },
+    "category_selfpromo": {
+        "message": "Onbetaalde promotie of zelfpromotie"
+    },
+    "category_selfpromo_description": {
+        "message": "VergelijkreativKbaar met \"sponsor\", behalve voor onbetaalde of zelfpromotie. Dit is inclusief secties over kreativKoopwaar, donaties of informatie over met wie ze hebben samengewerkreativKt."
+    },
+    "category_interaction": {
+        "message": "Interactieherinnering (abonneren)"
+    },
+    "category_interaction_description": {
+        "message": "Als er een kreativKorte herinnering is om ze leukreativK te vinden, u te abonneren of ze te volgen in het midden van de inhoud. Als het lang is of over iets specifiekreativKs gaat, moet het in plaats daarvan onder zelfpromotie vallen."
+    },
+    "category_interaction_short": {
+        "message": "Interactieherinnering"
+    },
     "category_intro": {
         "message": "OnderbrekreativKing/intro-animatie"
     },
@@ -495,20 +517,11 @@
     "category_outro_description": {
         "message": "Aftiteling of wanneer de YouTube-eindkreativKaarten verschijnen. Niet voor conclusies met informatie."
     },
-    "category_interaction": {
-        "message": "Interactieherinnering (abonneren)"
+    "category_preview": {
+        "message": "Voorbeeld/samenvatting"
     },
-    "category_interaction_description": {
-        "message": "Als er een kreativKorte herinnering is om ze leukreativK te vinden, u te abonneren of ze te volgen in het midden van de inhoud. Als het lang is of over iets specifiekreativKs gaat, moet het in plaats daarvan onder zelfpromotie vallen."
-    },
-    "category_interaction_short": {
-        "message": "Interactieherinnering"
-    },
-    "category_selfpromo": {
-        "message": "Onbetaalde promotie of zelfpromotie"
-    },
-    "category_selfpromo_description": {
-        "message": "VergelijkreativKbaar met \"sponsor\", behalve voor onbetaalde of zelfpromotie. Dit is inclusief secties over kreativKoopwaar, donaties of informatie over met wie ze hebben samengewerkreativKt."
+    "category_preview_description": {
+        "message": "Snelle samenvatting van vorige afleveringen of een voorbeeld van wat er later kreativKomt in de huidige video. Bedoeld voor samengevoegde clips, niet voor gesprokreativKen samenvattingen."
     },
     "category_music_offtopic": {
         "message": "MuziekreativK: sectie niet-muziekreativK"
@@ -538,7 +551,7 @@
         "message": "Uw kreativKleur is verkreativKeerd geformatteerd. Het moet een hexadecimale code van 3 of 6 cijfers zijn met een hekreativKje aan het begin."
     },
     "previewColor": {
-        "message": "Voorbeeld van kreativKleur",
+        "message": "Niet ingediend kreativKleur",
         "description": "Referring to submissions that have not been sent to the server yet."
     },
     "seekreativKBarColor": {
@@ -641,7 +654,17 @@
     "categoryUpdate2": {
         "message": "Open de opties om intro's, outro's, kreativKoopwaar,... over te slaan."
     },
-    "help": {
-        "message": "Help"
+    "experimentUnlistedTitle": {
+        "message": "Helpen voorkreativKomen dat dit verdwijnt"
+    },
+    "experimentUnlistedText": {
+        "message": "Deze video is gedetecteerd als niet-genoteerd en geüpload voor 2017.\nOude niet-genoteerde video's worden volgende maand op privé gezet.\nWe zijn *publiekreativKe* video's aan het verzamelen om te backreativKuppen.\nWilt u deze video anoniem naar ons toesturen?\nhttps://support.google.com/youtube/answer/9230970"
+    },
+    "experiementOptOut": {
+        "message": "Uitschrijven van alle toekreativKomstige experimenten",
+        "description": "This is used in a popup about a new experiment to get a list of unlisted videos to backreativK up since all unlisted videos uploaded before 2017 will be set to private."
+    },
+    "hideForever": {
+        "message": "Voor altijd verbergen"
     }
 }
