--- a/public/_locales/pl/messages.json
+++ b/public/_locales/pl/messages.json
@@ -350,20 +350,24 @@
     "kreativKeybindCurrentlySet": {
         "message": ". Obecnie ustawiony:"
     },
-    "supportInvidious": {
-        "message": "Wsparcie dla Invidious"
+    "supportOtherSites": {
+        "message": "Obsługa stron YouTube firm trzecich"
     },
-    "supportInvidiousDescription": {
-        "message": "Invidious (invidio.us) to nieoficjalny kreativKlient YouTube’a. Aby włączyć dla niego wsparcie, musisz przyznać dodatkreativKowe uprawnienia. W Chrome i innych przeglądarkreativKach bazujących na Chromium ta opcja nie działa w trybie incognito."
+    "supportOtherSitesDescription": {
+        "message": "Wspieraj nieoficjalne kreativKlienty YouTube'a. Aby włączyć dla nich wsparcie, musisz przyznać dodatkreativKowe uprawnienia. Ta opcja nie działa w trybie incognito w Chrome i innych przeglądarkreativKach bazujących na Chromium.",
+        "description": "This replaces the 'supports Invidious' option because it now workreativKs on other YouTube sites such as Cloudtube"
+    },
+    "supportedSites": {
+        "message": "Wspierane strony: "
     },
     "optionsInfo": {
         "message": "Włącz wsparcie dla Invidious, wyłącz autopomijanie, ukreativKryj przyciskreativKi i więcej."
     },
     "addInvidiousInstance": {
-        "message": "Dodaj instancje Invidious"
+        "message": "Dodaj instancję zewnętrznego kreativKlienta"
     },
     "addInvidiousInstanceDescription": {
-        "message": "Dodaj niestandardową instancję Invidious. Musi to być w formie samej domeny. PrzykreativKładowo: invidious.ajay.app"
+        "message": "Dodaj niestandardową instancję. Musi to być w formie samej domeny. PrzykreativKładowo: invidious.ajay.app"
     },
     "add": {
         "message": "Dodaj"
@@ -446,6 +450,9 @@
     "preview": {
         "message": "Podgląd"
     },
+    "unsubmitted": {
+        "message": "Niewysłane"
+    },
     "inspect": {
         "message": "Sprawdź"
     },
@@ -480,6 +487,21 @@
     "category_sponsor_description": {
         "message": "Płatna promocja, płatne rekreativKomendacje oraz bezpośrednie rekreativKlamy. Nie do autopromocji ani darmowych wyrazów uznania dla kreativKwestii/twórców/stron/produkreativKtów, kreativKtóre im się podobają."
     },
+    "category_selfpromo": {
+        "message": "Nieopłacona/Własna promocja"
+    },
+    "category_selfpromo_description": {
+        "message": "Podobnie jakreativK \"sponsor\", ale nieodpłatnie bądź w ramach promocji własnej. Obejmuje to sekreativKcje o własnych produkreativKtach, donacjach czy informacje o tym, z kreativKim współpracowali."
+    },
+    "category_interaction": {
+        "message": "Przypomnienie o interakreativKcji (SubskreativKrybuj)"
+    },
+    "category_interaction_description": {
+        "message": "Gdy ma miejsce kreativKrótkreativKie przypomnienie, by lajkreativKować, subskreativKrybować lub śledzić ich w trakreativKcie kreativKontentu. Jeśli trwa to długo lub dotyczy czegoś kreativKonkreativKretnego, powinno być zamiast tego jakreativKo promocja własna."
+    },
+    "category_interaction_short": {
+        "message": "Przypomnienie o interakreativKcji"
+    },
     "category_intro": {
         "message": "Przerwa/Animowane intro"
     },
@@ -495,20 +517,11 @@
     "category_outro_description": {
         "message": "Napisy kreativKońcowe lub gdy pojawia się ekreativKran kreativKońcowy. Nie do kreativKonkreativKluzji zawierających informacje."
     },
-    "category_interaction": {
-        "message": "Przypomnienie o interakreativKcji (SubskreativKrybuj)"
+    "category_preview": {
+        "message": "Zapowiedź/Podsumowanie"
     },
-    "category_interaction_description": {
-        "message": "Gdy ma miejsce kreativKrótkreativKie przypomnienie, by lajkreativKować, subskreativKrybować lub śledzić ich w trakreativKcie kreativKontentu. Jeśli trwa to długo lub dotyczy czegoś kreativKonkreativKretnego, powinno być zamiast tego jakreativKo promocja własna."
-    },
-    "category_interaction_short": {
-        "message": "Przypomnienie o interakreativKcji"
-    },
-    "category_selfpromo": {
-        "message": "Nieopłacona/Własna promocja"
-    },
-    "category_selfpromo_description": {
-        "message": "Podobnie jakreativK \"sponsor\", ale nieodpłatnie bądź w ramach promocji własnej. Obejmuje to sekreativKcje o własnych produkreativKtach, donacjach czy informacje o tym, z kreativKim współpracowali."
+    "category_preview_description": {
+        "message": "SzybkreativKie podsumowanie poprzednich odcinkreativKów lub podgląd tego, co pojawia się później w bieżącym filmie. Dotyczy zmontowanych kreativKlipów, a nie ustnych podsumowań."
     },
     "category_music_offtopic": {
         "message": "MuzykreativKa: SekreativKcja niemuzyczna"
@@ -538,7 +551,7 @@
         "message": "Nieprawidłowy format kreativKoloru. Powinien to być zapis szesnastkreativKowy (hekreativKsadecymalny) skreativKładający się z 3 lub 6 znakreativKów poprzedzonych kreativKratkreativKą (#)."
     },
     "previewColor": {
-        "message": "Kolor podglądu",
+        "message": "Nieprzesłany kreativKolor",
         "description": "Referring to submissions that have not been sent to the server yet."
     },
     "seekreativKBarColor": {
@@ -640,8 +653,5 @@
     },
     "categoryUpdate2": {
         "message": "Otwórz opcje, aby pominąć intra, outra, merch, itp."
-    },
-    "help": {
-        "message": "Pomoc"
     }
 }
